tests/baselines/reference/augmentedTypeAssignmentCompatIndexSignature.errors.txt
tests/cases/conformance/types/members/augmentedTypeAssignmentCompatIndexSignature.ts(19,5): error TS2322: Type '() => 无值' is not assignable to type '{ [n: 数字]: Bar; }'.
  Index signature is missing in type '() => 无值'.


==== tests/cases/conformance/types/members/augmentedTypeAssignmentCompatIndexSignature.ts (1 errors) ====
    interface Foo { a }
    interface Bar { b }
    
    interface Object {
        [n: number]: Foo;
    }
    
    interface Function {
        [n: number]: Bar;
    }
    
    var o = {};
    var f = () => { };
    
    var v1: {
        [n: number]: Foo
    } = o; // Should be allowed
    
    var v2: {
        ~~
!!! error TS2322: Type '() => 无值' is not assignable to type '{ [n: 数字]: Bar; }'.
!!! error TS2322:   Index signature is missing in type '() => 无值'.
        [n: number]: Bar
    } = f; // Should be allowed